--- a/ClickGame.html
+++ b/ClickGame.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <body>
 
+  <body>
+    <h1>Mouse Click Game</h1>
+    <p>
+      Welcome to a simple mouse click accuracy game. The concept is easy, simply try to
+      click as many of the red targets as possible in the alloted time
+    </p>
 
     <link rel="stylesheet" type="text/css" href="ClickGame.css"/>
     <canvas id="canvas" width="600" height="400"></canvas>
