--- a/ClickGame.html
+++ b/ClickGame.html
@@ -4,13 +4,12 @@
   <body>
     <h1>Mouse Click Game</h1>
     <p>
-      Welcome to a simple mouse click accuracy game. To play, simply try to click 10
+      Welcome to a small mouse click accuracy game. To play, simply try to click 10
       targets as fast as you can.
     </p>
 
     <link rel="stylesheet" type="text/css" href="ClickGame.css"/>
     <canvas id="canvas" width="600" height="400"></canvas>
-
     <p>Targets left: <span id="targetsLeft"> </span></p>
 
 
