Add highscores page and GET request using jQuery

--- a/public/highscores.html
+++ b/public/highscores.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>High Scores</h1>
-    <!-- TODO request data from /scores and display it-->
+    <h1>Click Game</h1>
+
+    <h3 id="heading">High scores:</h3>
+
+    <!-- NOTE faster to load jquery locally?-->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="highscores.js"></script>
+
   </body>
 
 </html>
