--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <canvas id="canvas" width="600" height="400"></canvas>
     <p>Targets left: <span id="targetsLeft"> </span></p>
 
-    <a href="highscores">High scores</a>
+    <a href="highscores.html">High scores</a>
 
 
     <script src="ClickGame.js"></script>
