--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <a href="highscores.html">High scores</a>
 
 
-    <script src="ClickGame.js"></script>
+    <script src="index.js"></script>
   </body>
 
 </html>
