Add code to POST scores to server, however does not work

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <a href="highscores.html">High scores</a>
 
 
+    <!-- NOTE jQuery used to post score json to server, though there should be better way to do this-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="index.js"></script>
   </body>
 
