Add styling to high scores page

--- a/public/highscores.html
+++ b/public/highscores.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <link rel="stylesheet" type="text/css" href="ClickGame.css"/>
+
     <h1>Click Game</h1>
 
     <h3 id="heading">High scores:</h3>
 
-    <!-- NOTE faster to load jquery locally?-->
+    <!-- FIXME faster to load jquery locally?-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="highscores.js"></script>
