Changed hit detection to mousedown instead of click
Should help improve responsiveness of game. Also change comments

--- a/public/highscores.html
+++ b/public/highscores.html
@@ -7,7 +7,7 @@
 
     <h3 id="heading">High scores:</h3>
 
-    <!-- FIXME faster to load jquery locally?-->
+    <!-- HACK faster to load jquery locally?-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="highscores.js"></script>
