--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <a href="highscores.html">High scores</a>
 
 
-    <!-- FIXME jQuery used to post score json to server, though there should be better way to do this-->
+    <!-- HACK jQuery used to post score json to server, though there should be better way to do this-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="index.js"></script>
   </body>
